ver 0.22.9 (not yet released)
* database
  - simple: load all .mpdignore files of all parent directories
* decoder
  - ffmpeg: support the tags "sort_album", "album-sort", "artist-sort"
  - ffmpeg: fix build failure with FFmpeg 3.4
* Windows
  - fix build failure with SQLite

ver 0.22.8 (2021/05/22)
* fix crash bug in "albumart" command (0.22.7 regression)

ver 0.22.7 (2021/05/19)
* protocol
  - don't use glibc extension to parse time stamps
  - optimize the "albumart" command
* input
  - curl: send user/password in the first request, save one roundtrip
* decoder
  - ffmpeg: fix build problem with FFmpeg 3.4
  - gme: support RSN files
* storage
  - curl: don't use glibc extension
* database
  - simple: fix database corruption bug
* output
  - fix crash when pausing with multiple partitions
  - jack: enable on Windows
  - httpd: send header "Access-Control-Allow-Origin: *"
  - wasapi: add algorithm for finding usable audio format
  - wasapi: use default device only if none was configured
  - wasapi: add DoP support

ver 0.22.6 (2021/02/16)
* fix missing tags on songs in queue

ver 0.22.5 (2021/02/15)
* protocol
  - error for malformed ranges instead of ignoring silently
  - better error message for open-ended range with "move"
* database
  - simple: fix missing CUE sheet metadata in "addid" command
* tags
  - id: translate TPE3 to Conductor, not Performer
* archive
  - iso9660: another fix for unaligned reads
* output
  - httpd: error handling on Windows improved
  - pulse: fix deadlock with "always_on"
* Windows:
  - enable https:// support (via Schannel)
* Android
  - work around "Permission denied" on mpd.conf

ver 0.22.4 (2021/01/21)
* protocol
  - add command "binarylimit" to allow larger chunk sizes
  - fix "readpicture" on 32 bit machines
  - show duration and tags of songs in virtual playlist (CUE) folders
* storage
  - curl: fix several WebDAV protocol bugs
* decoder
  - dsdiff: apply padding to odd-sized chunks
* filter